# GDGN

./: .gitignore  AGENTS.md  pyproject.toml
paper/: .gitignore
program/preprocess/: compute_ssgsea.py  drug_feat.py  extract_cgc_driver_genes.py  filter.py  filter_dgi.py  get_smiles.py  methylation_tss1kb.py  parse_msigdb_pathways.py  ppi_filter.py  preprocess_cnv.py  preprocess_expression.py  preprocess_ic50.py  preprocess_mutation.py  protein_embedding.py  test.py
