[project]
name = "srtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "biopython>=1.87",
    "captum>=0.9.0",
    "deepchem>=2.8.0",
    "gseapy>=1.3.0",
    "openpyxl>=3.1.5",
    "pubchempy>=1.0.5",
    "pyg-lib",
    "rdkit>=2026.3.3",
    "scanpy>=1.12.2",
    "torch==2.12",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torchvision",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
]

[tool.uv.sources]
pyg-lib = [
    { index = "pyg-cu132" },
]
torch = [
    { index = "pytorch-cu132" },
]
torchvision = [
    { index = "pytorch-cu132" },
]

[tool.uv]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "pyg-cu132"
url = "https://data.pyg.org/whl/torch-2.12.0+cu132.html"
explicit = true
format = "flat"

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]
